--- a/sass/main.scss
+++ b/sass/main.scss
@@ -347,15 +347,18 @@ box-shadow: 0em 0.15em 0.1em $colour-bordure1;
  display:flex;
 }
 
-
+.plat__card:hover .animation__essai{
+  display: block;
+}
 
  .animation__essai {
   
   margin-left: 50px;
   width: 200px;
   background-color: $colour-tertiaire;
-  animation: essai__animation 2s infinite alternate;
+  animation: essai__animation 5s infinite alternate;
   border-radius: 0 20px 20px 0;
+  display: none;
 }
  
 @keyframes essai__animation {
