--- a/sass/main.scss
+++ b/sass/main.scss
@@ -370,7 +370,19 @@ box-shadow: 0em 0.15em 0.1em $colour-bordure1;
   margin:auto;
   padding:auto;
   will-change: transform;/*https://www.joshwcomeau.com/animation/css-transitions/*/
+  
   }
+  .plat__card:hover .fas fa-check-circle{
+ display: inline-block;
 
+ transform: rotate(45deg) translateX(180px);
+ transition: 2s;
+ -webkit-transform: rotate(45deg);
+ -moz-transform: rotate(45deg);
+ -ms-transform: rotate(45deg);
+ -o-transform: rotate(45deg);
+ transform: rotate(45deg);
+ display: inline-block;
+  }
 
 
