--- a/public/css/style.css
+++ b/public/css/style.css
@@ -404,7 +404,6 @@ main {
   flex-direction: column;
   text-align: left;
   padding: 0;
-  width: 90%;
   margin-left: 0;
   display: flex;
   height: 100%;
@@ -416,15 +415,33 @@ main {
   display: flex;
   flex-direction: column;
   text-align: left;
-  padding: 3.5em;
-  width: 20%;
+  padding: 3em;
   margin: auto;
   margin-top: 0;
   margin-bottom: 0;
+  margin-right: 0;
   display: flex;
   height: 100%;
   border: solid 2px purple;
   border-radius: 0 20px 20px 0;
+  background-color: #99e2e0;
+}
+
+.colonne:hover {
+  cursor: pointer;
+  transition: transform 500ms;
+}
+
+.colonne:hover .box {
+  transition: transform 500ms;
+  transform: translatex(5px);
+}
+
+.fa-check-circle {
+  font-size: 3em;
+  background-color: #99e2e0;
+  color: white;
+  margin: auto;
 }
 
 /*# sourceMappingURL=style.css.map */
