--- a/sass/main.scss
+++ b/sass/main.scss
@@ -323,7 +323,6 @@ main {
  }
 
  .roboto--font{
-
 margin:0;
 width: 100%;
 height: 100%;
@@ -335,28 +334,46 @@ box-shadow: 0em 0.15em 0.1em $colour-bordure1;
   display: flex;
   flex-direction: column;
  text-align: left;
- padding: 0;
- width: 90%;
+ padding: 0; 
  margin-left: 0;
  display:flex;
  height: 100%;
  border:solid 2px blue;
  border-radius: 20px 0 0 20px;
- 
 }
+
 .box{
   display: flex;
   flex-direction: column;
  text-align: left;
- padding: 3.5em;
- width: 20%;
+ padding: 3em;
  margin: auto;
  margin-top:0;
  margin-bottom: 0;
+ margin-right: 0;
  display:flex;
  height: 100%;
  border:solid 2px purple;
  border-radius: 0 20px 20px 0;
+ background-color:$colour-tertiaire ;
+}
+
+.colonne:hover {
+  cursor: pointer;
+  transition:transform 500ms;
+}
+.colonne:hover .box{
+  transition:transform 500ms;
+  transform: translatex(5px);
+
+
+}
+.fa-check-circle{
+  font-size: 3em;
+  background-color:$colour-tertiaire ;
+  color:white;
+  margin:auto;
+  
 }
 
 
