--- a/public/css/style.css
+++ b/public/css/style.css
@@ -354,7 +354,9 @@ main {
 }
 
 .overflow-ellipsis {
+  overflow: hidden;
   text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .plat__card__p {
@@ -404,12 +406,13 @@ main {
   display: flex;
   flex-direction: column;
   text-align: left;
-  padding: 0;
   margin-left: 0;
-  display: flex;
   height: 100%;
   border: solid 2px blue;
   border-radius: 20px 0 0 20px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .box {
