--- a/sass/main.scss
+++ b/sass/main.scss
@@ -263,7 +263,9 @@ main {
 }
 
 .overflow-ellipsis {
+  overflow: hidden;
   text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .plat__card__p {
@@ -310,12 +312,13 @@ main {
   display: flex;
   flex-direction: column;
   text-align: left;
-  padding: 0;
   margin-left: 0;
-  display: flex;
   height: 100%;
   border: solid 2px blue;
   border-radius: 20px 0 0 20px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .box {
