--- a/sass/main.scss
+++ b/sass/main.scss
@@ -36,17 +36,48 @@ main {
   text-align: center;
 }
 
-.Fonctionnement__btn {
+.Fonctionnement__btn1 {
   border-radius: 25px;
   text-align: center;
   width: 80%;
   margin: auto;
-  margin: 9px 9px;
-  padding: 0.5em;
-  margin-bottom: 20px;
+
   box-shadow: 2px 2px 2px $colour-nuancefonce;
   display: flex;
   flex-direction: row;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  border: solid 3px magenta;
+}
+.Fonctionnement__btn2 {
+  border-radius: 25px;
+  text-align: center;
+  width: 80%;
+
+  box-shadow: 2px 2px 2px $colour-nuancefonce;
+  display: flex;
+  flex-direction: row;
+  position: absolute;
+  top: 5em;
+  right: 0;
+  left: 0;
+  border: solid 3px black;
+}
+.Fonctionnement__btn3 {
+  border-radius: 25px;
+  text-align: center;
+  width: 80%;
+
+  box-shadow: 2px 2px 2px $colour-nuancefonce;
+  display: flex;
+  flex-direction: row;
+  position: absolute;
+  top: 10em;
+  right: 0;
+  left: 0em;
+  border: solid 3px green;
 }
 
 .Fonctionnement__btn-color {
@@ -69,32 +100,31 @@ main {
   margin-left: -1em;
 }
 
-.fonctionnement__btn-placement {
-  position: absolute;
-  left: -1em;
-}
-
-.Fonctionnement__btn p {
-  display: flex;
-  flex-direction: row;
-  white-space: nowrap; /*http://patatos.over-b.com/article-comment-eviter-un-retour-a-la-ligne-en-css-102725385.html*/
+.Fonctionnement__btn-placement {
   position: relative;
-
-  width: 90%;
-  margin: auto;
-  height: 2em;
-  left: 0.5em;
-  line-height: 2em; /*https://www.journaldunet.fr/web-tech/developpement/1202779-comment-obtenir-un-texte-aligne-verticalement-au-milieu-d-une-div */
+  left: -0.08em;
 }
-.Fonctionnement__btn__p p {
+
+.Fonctionnement__btn__p {
   font-weight: bold;
   font-size: larger;
   text-align: center;
   color: black;
+  white-space: nowrap; /*http://patatos.over-b.com/article-comment-eviter-un-retour-a-la-ligne-en-css-102725385.html*/
+  position: absolute;
+  left: 3em;
 }
-
-.fa-mobile-alt {
-  font-size: 2em;
+.Fonctionnement__block {
+  border-radius: 25px;
+  text-align: center;
+  width: 100%;
+  margin: auto;
+  height: 15em;
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  border: blue 1px solid;
+  position: relative;
 }
 
 .restaurants__card {
@@ -170,13 +200,19 @@ main {
 
 .fa-list-ul,
 .fa-mobile-alt {
-  font-size: 2em;
+  font-size: 1.2em;
   color: lighten($colour-footer, 20%);
+  position: relative;
+  top: 1em;
+  left: 0.7em;
 }
 
 .fa-store {
   color: $colour-primary;
-  font-size: 2em;
+  font-size: 1.2em;
+  position: relative;
+  top: 1em;
+  left: 0.7em;
 }
 .fa-heart {
   font-size: 1em;
@@ -307,7 +343,7 @@ main {
   height: 100%;
   box-shadow: 0em 0.15em 0.1em $colour-bordure1;
 }
-
+/*debut code pour la premier animation****************************************************************************/
 .colonne {
   display: flex;
   flex-direction: column;
@@ -374,3 +410,4 @@ main {
   transform: rotate(1turn);
   transition: transform 1s ease-in-out;
 }
+/*fin code pour la premier animation*******************************************************/
