--- a/sass/main.scss
+++ b/sass/main.scss
@@ -378,7 +378,7 @@ main {
   cursor: pointer;
   transition-duration: 0;
 }
-.plat__card:hover .box {
+.plat__card:active .box {
   display: flex;
   flex-direction: column;
   text-align: left;
@@ -402,7 +402,7 @@ main {
   transform: rotate(0turn);
   transition: transform 2s ease-in-out;
 }
-.plat__card:hover .fa-check-circle {
+.plat__card:active .fa-check-circle {
   font-size: 3em;
   background-color: $colour-tertiaire;
   color: white;
