--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,47 @@
 @import "./layouts/footer";
 @import "./pages/accueil";
 
+/*debut de mon spinner*/
+
+.mon_loading_spinner {
+  animation: MonSpinner;
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  left: 0;
+  top: 0;
+  animation-delay: 0;
+  animation-duration: 3s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards; /*sa sait pour que l'animation reste sur opacity0*/
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 10;
+}
+@keyframes MonSpinner {
+  from {
+    opacity: 1;
+  }
+  20% {
+    opacity: 0.97;
+  }
+  40% {
+    opacity: 0.91;
+  }
+  60% {
+    opacity: 0.79;
+  }
+  80% {
+    opacity: 0.55;
+  }
+  to {
+    opacity: 0;
+  }
+}
+
+/*fin de mon spinner*/
+
 a {
   text-decoration: none;
 }
