rajout du background-color pour le spinner

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -26,6 +26,7 @@
   align-items: center;
   justify-content: center;
   z-index: 10;
+  background-color: $colour-primary;
 }
 @keyframes MonSpinner {
   from {
