--- a/public/css/style.css
+++ b/public/css/style.css
@@ -100,6 +100,7 @@ footer a {
   align-items: center;
   justify-content: center;
   z-index: 10;
+  background-color: #9356dc;
 }
 
 @keyframes MonSpinner {
