--- a/public/css/style.css
+++ b/public/css/style.css
@@ -84,20 +84,84 @@ footer a {
 }
 
 /*debut de mon spinner*/
-.loadingspinner {
-  pointer-events: none;
-  width: 2.5em;
-  height: 2.5em;
-  border: 0.4em solid transparent;
-  border-color: #eee;
-  border-top-color: #3e67ec;
-  border-radius: 50%;
-  animation: loadingspin 1s linear infinite;
+.lds-grid {
+  display: inline-block;
+  position: relative;
+  width: auto;
+  height: auto;
 }
 
-@keyframes loadingspin {
-  100% {
-    transform: rotate(360deg);
+.lds-grid div {
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  border-radius: 50%;
+  background: #9356dc;
+  animation: lds-grid 1.2s linear;
+  animation-duration: 3s;
+  color: chartreuse;
+}
+
+.lds-grid div:nth-child(1) {
+  top: 8px;
+  left: 8px;
+  animation-delay: 0s;
+}
+
+.lds-grid div:nth-child(2) {
+  top: 8px;
+  left: 32px;
+  animation-delay: -0.4s;
+}
+
+.lds-grid div:nth-child(3) {
+  top: 8px;
+  left: 56px;
+  animation-delay: -0.8s;
+}
+
+.lds-grid div:nth-child(4) {
+  top: 32px;
+  left: 8px;
+  animation-delay: -0.4s;
+}
+
+.lds-grid div:nth-child(5) {
+  top: 32px;
+  left: 32px;
+  animation-delay: -0.8s;
+}
+
+.lds-grid div:nth-child(6) {
+  top: 32px;
+  left: 56px;
+  animation-delay: -1.2s;
+}
+
+.lds-grid div:nth-child(7) {
+  top: 56px;
+  left: 8px;
+  animation-delay: -0.8s;
+}
+
+.lds-grid div:nth-child(8) {
+  top: 56px;
+  left: 32px;
+  animation-delay: -1.2s;
+}
+
+.lds-grid div:nth-child(9) {
+  top: 56px;
+  left: 56px;
+  animation-delay: -1.6s;
+}
+
+@keyframes lds-grid {
+  0%, 100% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
   }
 }
 /*fin de mon spinner*/
