debut spaning loanner

--- a/sass/utils/animation.scss
+++ b/sass/utils/animation.scss
@@ -63,6 +63,14 @@
 }
 /*fin code pour la premier animation*******************************************************/
 /*debut de mon spinner*/
+.spinner__box {
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  background-color: $colour-tertiaire;
+  z-index: 10000;
+  animation-duration: 3s;
+}
 .loader {
   margin: 100px auto;
   font-size: 25px;
