debut loaaner spinner

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -492,7 +492,7 @@ main {
   border-radius: 2em 2em 0 0;
   margin-top: -1.8em;
   padding-top: 1em;
-  background-color: #F6F6F6;
+  background-color: #f6f6f6;
   width: 100%;
 }
 
@@ -551,7 +551,7 @@ main {
 
 .main__menu {
   margin-top: -1.4em;
-  background-color: #F6F6F6;
+  background-color: #f6f6f6;
 }
 
 .espace__gauche_titre_H2 {
