--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -5,5 +5,8 @@ $colour-bordure1: #d5d5d5;
 $colour-nuancefonce: #eaeaea;
 $colour-nuanceclair: #f6f6f6;
 $colour-footer: #353535;
-$colour-plat__card:#F6F6F6; 
-$colour-plat__card--fond:#ffffff; 
+$colour-plat__card: #f6f6f6;
+$colour-plat__card--fond: #ffffff;
+$colour-primary2: rgba(147, 86, 220, 0.2);
+$colour-primary5: rgba(147, 86, 220, 0.5);
+$colour-primary7: rgba(147, 86, 220, 0.7);
