--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -10,3 +10,6 @@ $colour-plat__card--fond: #ffffff;
 $colour-primary2: rgba(147, 86, 220, 0.2);
 $colour-primary5: rgba(147, 86, 220, 0.5);
 $colour-primary7: rgba(147, 86, 220, 0.7);
+$colour-secondary2: rgba(255, 121, 218, 0.2);
+$colour-secondary5: rgba(255, 121, 218, 0.5);
+$colour-secondary7: rgba(255, 121, 218, 0.7);
