--- a/public/css/style.css
+++ b/public/css/style.css
@@ -90,7 +90,6 @@ footer a {
   text-align: left;
   margin-left: 0;
   height: 100%;
-  border: solid 2px blue;
   border-radius: 20px 0 0 20px;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -108,7 +107,6 @@ footer a {
   margin-right: -10em;
   display: flex;
   height: 100%;
-  border: solid 2px purple;
   border-radius: 0 20px 20px 0;
   background-color: #99e2e0;
   transition-duration: 2s;
@@ -125,7 +123,6 @@ footer a {
   margin-right: 0em;
   display: flex;
   height: 100%;
-  border: solid 2px purple;
   border-radius: 0 20px 20px 0;
   background-color: #99e2e0;
   transition-duration: 1s;
@@ -248,6 +245,20 @@ footer a {
   }
 }
 /*fin de mon spinner*/
+/*debut animation coeur*/
+.coeur:hover {
+  background-color: #9356dc;
+  transition-duration: 1s;
+  box-shadow: #9356dc;
+}
+
+.far fa-heart:hover {
+  color: #9356dc;
+  transition-duration: 1s;
+  box-shadow: #9356dc;
+}
+
+/*fin animation coeur*/
 a {
   text-decoration: none;
 }
