--- a/sass/utils/_animation.scss
+++ b/sass/utils/_animation.scss
@@ -106,6 +106,13 @@
   -ms-transform: translateZ(0);
   transform: translateZ(0);
 }
+
+.loader__titre {
+  font-size: 0.7em;
+  position: relative;
+  left: 1em;
+}
+
 @-webkit-keyframes myloader {
   0%,
   100% {
@@ -116,10 +123,11 @@
       -1.8em -1.8em 0 0em $colour-secondary7;
   }
   12.5% {
-    box-shadow: 0em -2.6em 0em 0em $colour-primary7, 1.8em -1.8em 0 0em #ffffff,
-      2.5em 0em 0 0em $colour-primary2, 1.75em 1.75em 0 0em $colour-secondary2,
-      0em 2.5em 0 0em $colour-primary2, -1.8em 1.8em 0 0em $colour-secondary2,
-      -2.6em 0em 0 0em $colour-primary2, -1.8em -1.8em 0 0em $colour-secondary5;
+    box-shadow: 0em -2.6em 0em 0em $colour-primary7,
+      1.8em -1.8em 0 0em $colour-primary, 2.5em 0em 0 0em $colour-primary2,
+      1.75em 1.75em 0 0em $colour-secondary2, 0em 2.5em 0 0em $colour-primary2,
+      -1.8em 1.8em 0 0em $colour-secondary2, -2.6em 0em 0 0em $colour-primary2,
+      -1.8em -1.8em 0 0em $colour-secondary5;
   }
   25% {
     box-shadow: 0em -2.6em 0em 0em $colour-primary5,
@@ -228,15 +236,16 @@
 /*fin de mon spinner*/
 /*debut animation coeur*/
 
-.coeur:hover::before {
-  font-size: 2em;
+.coeur:hover {
+  font-size: 1em;
 
   transition-duration: 1s;
-  background-color: white;
 
-  background: linear-gradient(180deg, $colour-secondary, $colour-primary);
+  background-color: linear-gradient(180deg, $colour-secondary, $colour-primary);
 
-  content: "<i class=" far fa-heart "></i>"; /*https://developer.mozilla.org/fr/docs/Web/CSS/::before*/
+  content: "< class=" fas fa-heart "></i>"; /*https://developer.mozilla.org/fr/docs/Web/CSS/::before*/
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 /*fin animation coeur*/
