--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -15,3 +15,8 @@ footer a {
   color: white;
   text-decoration: none;
 }
+footer h1 {
+  color: white;
+  text-decoration: none;
+  margin: 2em 0 0 0;
+}
