--- a/public/css/style.css
+++ b/public/css/style.css
@@ -260,25 +260,23 @@ footer h1 {
 /*debut animation coeur*/
 .box__coeur {
   display: flex;
-  border: solid blue 2px;
   position: absolute;
   right: 2em;
+  border: solid 3px blue;
 }
 
 .coeur__etat__colorant {
-  opacity: 0;
-  color: linear-gradient(180deg, #ff79da, #9356dc);
+  color: red;
   font-size: 3em;
   position: relative;
   left: 1em;
+  opacity: 0;
 }
 
 .coeur__etat__normal {
-  opacity: 1;
   font-size: 3em;
   position: relative;
   left: 0em;
-  color: black;
 }
 
 .coeur__etat__colorant:hover {
@@ -295,27 +293,25 @@ footer h1 {
   animation-delay: 0.1ms;
   animation-iteration-count: 1;
   animation-fill-mode: both;
+  color: none;
 }
 
 @keyframes coeur__colorant {
   0% {
     opacity: 0;
-    z-index: 10;
+    z-index: 0;
   }
   100% {
     opacity: 1;
-    color: linear-gradient(180deg, #ff79da, #9356dc);
-    z-index: 5;
+    z-index: 1;
   }
 }
 @keyframes coeur__decolorant {
   0% {
     opacity: 1;
-    z-index: 5;
   }
   100% {
     opacity: 0;
-    z-index: 10;
   }
 }
 /*fin animation coeur*/
@@ -325,7 +321,6 @@ a {
 
 body {
   color: black;
-  background-color: black;
   z-index: 0;
 }
 
@@ -539,10 +534,6 @@ main {
   position: relative;
   top: 1em;
   left: 0.7em;
-}
-
-.fa-heart {
-  font-size: 1em;
 }
 
 .header__img--menu {
