--- a/sass/utils/_animation.scss
+++ b/sass/utils/_animation.scss
@@ -238,23 +238,22 @@
 
 .box__coeur {
   display: flex;
-  border: solid blue 2px;
+
   position: absolute;
   right: 2em;
+  border: solid 3px blue;
 }
 .coeur__etat__colorant {
-  opacity: 0;
-  color: linear-gradient(180deg, $colour-secondary, $colour-primary);
+  color: red;
   font-size: 3em;
   position: relative;
   left: 1em;
+  opacity: 0;
 }
 .coeur__etat__normal {
-  opacity: 1;
   font-size: 3em;
   position: relative;
   left: 0em;
-  color: black;
 }
 
 .coeur__etat__colorant:hover {
@@ -271,26 +270,24 @@
   animation-delay: 0.1ms;
   animation-iteration-count: 1;
   animation-fill-mode: both;
+  color: none;
 }
 @keyframes coeur__colorant {
   0% {
     opacity: 0;
-    z-index: 10;
+    z-index: 0;
   }
   100% {
     opacity: 1;
-    color: linear-gradient(180deg, $colour-secondary, $colour-primary);
-    z-index: 05;
+    z-index: 1;
   }
 }
 @keyframes coeur__decolorant {
   0% {
     opacity: 1;
-    z-index: 05;
   }
   100% {
     opacity: 0;
-    z-index: 10;
   }
 }
 
