--- a/public/css/style.css
+++ b/public/css/style.css
@@ -267,17 +267,20 @@ footer h1 {
 
 .coeur__etat__colorant {
   color: red;
-  font-size: 3em;
+  font-size: 2em;
   position: absolute;
+  left: 0;
   opacity: 0;
 }
 
 .coeur__etat__normal {
-  font-size: 3em;
+  font-size: 2em;
   position: absolute;
+  color: black;
+  left: 0;
 }
 
-.coeur__etat__colorant:hover {
+.coeur:hover .coeur__etat__colorant {
   animation-name: coeur__colorant;
   animation-duration: 5s;
   animation-delay: 0.1ms;
@@ -285,7 +288,7 @@ footer h1 {
   animation-fill-mode: both;
 }
 
-.coeur__etat__normal:hover {
+.coeur:hover .coeur__etat__normal {
   animation-name: coeur__decolorant;
   animation-duration: 5s;
   animation-delay: 0.1ms;
@@ -297,11 +300,9 @@ footer h1 {
 @keyframes coeur__colorant {
   0% {
     opacity: 0;
-    z-index: 0;
   }
   100% {
     opacity: 1;
-    z-index: 1;
   }
 }
 @keyframes coeur__decolorant {
