--- a/sass/utils/_animation.scss
+++ b/sass/utils/_animation.scss
@@ -240,11 +240,11 @@
   display: flex;
 
   position: relative;
-  right: 2em;
+  right: 0.5em;
   border: solid 3px blue;
 }
 .coeur__etat__colorant {
-  color: red;
+  color: linear-gradient(160deg, $colour-secondary, $colour-primary);
   font-size: 2em;
   position: absolute;
   left: 0;
